# db_assistant

./: README.md  pyproject.toml
src/db_assistant/: SQLChainFix.py  chinook.db  crew.py  doc_use_case.py  google_agent.py  langchain_agent.py  langchain_siliconflow.py  main.py  openai_sql_agent.py  test.py  test_re.py  tool_use_case.py
src/db_assistant/config/: agents.yaml  tasks.yaml
