[project]
name = "db_assistant"
version = "0.1.0"
description = "db_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
db_assistant = "db_assistant.main:run"
run_crew = "db_assistant.main:run"
train = "db_assistant.main:train"
replay = "db_assistant.main:replay"
test = "db_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
